# partition-comparison

./: CMakeLists.txt  license.txt  setup.py
include/andres/: partition-comparison.hxx
src/: partition_comparison.pyx
src/mex/: andres_rand_index.cxx  andres_rand_index.def  andres_variation_of_information.cxx
src/unittest/: partition-comparison.cxx
